Kubernetes/bootstrap/argocd/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.nerine.dev`)
      services:
        - name: argocd-server
          port: 80
      middlewares:
        - name: public-chain
          namespace: traefik
        - name: authentik
          namespace: traefik
  tls:
    certResolver: letsencrypt
    domains:
      - main: nerine.dev
        sans:
          - "*.nerine.dev"
